Add exploration notebook

--- a/Training.ipynb
+++ b/Training.ipynb
@@ -246,6 +246,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The frozen model is used for the Transfer Learning experiments, as it's convolutional layers are freezed and only the FC layers are trained."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -332,6 +339,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The 3D model takes images of *128x128x50* shape.\n",
+        "- **Learning rate** is set to *5e-5* (the best one after some initial tuning)\n",
+        "- **Early stopping** is set to a patience value of 35 epochs on *validation accuracy*\n",
+        "- **Binary crossentropy** is used as loss function, optimized with the **Adam** optimizer."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -361,7 +378,7 @@
         "            .prefetch(4)\n",
         "        )\n",
         "\n",
-        "        initial_learning_rate = 1e-5 # from https://doi.org/10.3938/jkps.75.597\n",
+        "        initial_learning_rate = 5e-5 # from https://doi.org/10.3938/jkps.75.597\n",
         "        lr_schedule = keras.optimizers.schedules.ExponentialDecay(\n",
         "            initial_learning_rate, decay_steps=100000, decay_rate=0.96, staircase=True\n",
         "        )\n",
@@ -516,115 +533,20 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ogRDMissZI35",
-        "outputId": "f70491d7-8963-425b-b86a-660883f6bff4"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "(60, 128, 128, 50)"
-            ]
-          },
-          "execution_count": 21,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "xtest.shape"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3y5DTNn_YsJv",
-        "outputId": "47725a6e-037d-47ea-cb40-e2a6548c318f"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "15/15 [==============================] - 13s 77ms/step - loss: 0.4906 - acc: 0.7833\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "[0.49056488275527954, 0.7833333611488342]"
-            ]
-          },
-          "execution_count": 22,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "test = tf.data.Dataset.from_tensor_slices((xtest,ytest))\n",
-        "\n",
-        "\n",
-        "testset = (\n",
-        "    test.shuffle(len(test), seed=RANDOM_SEED)\n",
-        "    .batch(4)\n",
-        "    .prefetch(4)\n",
-        ")\n",
-        "\n",
-        "metrics = model.evaluate(testset)\n",
-        "metrics"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "fh6biD3_XWwp"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
-        "# Training on MRI without centering\n",
-        "path_3d = DATA_DIR / 'mri/validation/50-mri.h5'\n",
-        "model = tf.keras.models.load_model(path_3d)\n",
-        "base = DATA_DIR / f'mri/'\n",
-        "pos = np.load(base / 'new-pos.npy')\n",
-        "neg = np.load(base / 'new-neg.npy')\n",
-        "#xtrain = np.concatenate((pos,neg), axis=0)\n",
-        "#xtrain = np.load(base / 'xtrain.npy')\n",
-        "#xtest = np.load(base / 'xtest.npy')\n",
-        "xtest = np.concatenate((pos[:30],neg[:30]), axis=0)\n",
-        "ytrain = np.load(base / 'ytrain.npy')\n",
-        "ytest = np.load(base / '50-ytest.npy')\n",
-        "#results = DATA_DIR / f'pet/3d-folds/50/results/fold-{k}'\n",
-        "tf.keras.backend.clear_session()\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "jBzpxgb6v1SQ"
-      },
-      "outputs": [],
-      "source": [
-        "from sklearn.metrics import confusion_matrix, roc_auc_score\n",
-        "\n",
-        "def sensitivity(matrix):\n",
-        "    tn, fp, fn, tp = matrix.ravel()\n",
-        "    return tp / (tp + fn)\n",
-        "def specificity(matrix):\n",
-        "    tn, fp, fn, tp = matrix.ravel()\n",
-        "    return tn / (tn + fp)\n",
-        "\n",
-        "results = []"
+        "def plot_results(history):\n",
+        "  fig, ax = plt.subplots(1, 2, figsize=(20, 3))\n",
+        "  ax = ax.ravel()\n",
+        "  for i, metric in enumerate([\"acc\", \"loss\"]):\n",
+        "    ax[i].plot(history.history[metric])\n",
+        "    ax[i].plot(history.history[\"val_\" + metric])\n",
+        "    ax[i].set_title(\"Model {}\".format(metric))\n",
+        "    ax[i].set_xlabel(\"epochs\")\n",
+        "    ax[i].set_ylabel(metric)\n",
+        "    ax[i].legend([\"train\", \"val\"])\n",
+        "  return fig"
       ]
     },
     {
@@ -827,8 +749,7 @@
         "plt.text('accuracy', metrics[1], f\"{metrics[1]:.2f}\", ha='center', va='bottom')\n",
         "plt.suptitle(\"3D MRI loss and accuracy\")\n",
         "plt.ylim(0.01, 1)\n",
-        "plt.show()\n",
-        "plt.savefig(DATA_DIR/'mri/3d-folds/mri-train-box.pgf')"
+        "plt.show()"
       ]
     },
     {
@@ -2074,27 +1995,6 @@
         "plt.suptitle(\"Loss and accuracy on MRI dataset\")\n",
         "plt.ylim(0.01, 1)\n",
         "plt.show()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "gpOosjLzikE5"
-      },
-      "outputs": [],
-      "source": [
-        "def plot_results(history):\n",
-        "  fig, ax = plt.subplots(1, 2, figsize=(20, 3))\n",
-        "  ax = ax.ravel()\n",
-        "  for i, metric in enumerate([\"acc\", \"loss\"]):\n",
-        "    ax[i].plot(history.history[metric])\n",
-        "    ax[i].plot(history.history[\"val_\" + metric])\n",
-        "    ax[i].set_title(\"Model {}\".format(metric))\n",
-        "    ax[i].set_xlabel(\"epochs\")\n",
-        "    ax[i].set_ylabel(metric)\n",
-        "    ax[i].legend([\"train\", \"val\"])\n",
-        "  return fig"
       ]
     },
     {
