--- a/Dataset_MRI.ipynb
+++ b/Dataset_MRI.ipynb
@@ -249,7 +249,7 @@
       },
       "outputs": [],
       "source": [
-        "labels = set()  \n",
+        "labels = set()\n",
         "for i in range(1, 6):\n",
         "    labels = labels.union(clinical_data[f'dx{i}'].unique())\n",
         "simplified = {str(k): re.match('^(AD dem|Vasc.*? dem|Frontotemporal dem|other mental retarAD demion|(Active )?DLBD|Active PSNP|Dementia)', str(k), re.I) is not None for k in labels}\n",
@@ -375,13 +375,13 @@
         "        current_subj = row['Subject']\n",
         "        prec = (None, None) # i-2, i-1\n",
         "        succ = (clinical_data.at[index + 1, 'dementia'] if index + 1 in clinical_data.index and clinical_data.at[index + 1, 'Subject'] == current_subj else None, clinical_data.at[index + 2, 'dementia'] if index + 2 in clinical_data.index and clinical_data.at[index + 2, 'Subject'] == current_subj else None)\n",
-        "    \n",
+        "\n",
         "    if row['dementia'] == True:\n",
         "        new = prec[1] or any(succ)\n",
         "    else:\n",
         "        new = any(prec) and any(succ)\n",
         "    clinical_data.at[index, 'dementia'] = new\n",
-        "    \n",
+        "\n",
         "    prec = (prec[1], new) # i-1, i\n",
         "    succ = (succ[1], clinical_data.at[index + 3, 'dementia'] if index + 3 in clinical_data.index and clinical_data.at[index + 3, 'Subject'] == current_subj else None)"
       ]
@@ -453,11 +453,11 @@
         "for index, row in labeled_dataset.iterrows():\n",
         "    rows_of_subject = clinical_data.loc[clinical_data['Subject'] == row['Subject']][['Date', 'dementia']]\n",
         "    rows_of_subject['Date'] = rows_of_subject['Date'].apply(lambda x: abs(x - row['Date']))\n",
-        "    labeled_dataset.at[index,'Label'] = (rows_of_subject.groupby(by='Date', as_index=False) \n",
+        "    labeled_dataset.at[index,'Label'] = (rows_of_subject.groupby(by='Date', as_index=False)\n",
         "                                                        .any()\n",
         "                                                        .sort_values(by='Date')\n",
         "                                                        .loc[0]['dementia'])\n",
-        "    \n",
+        "\n",
         "labeled_dataset.to_csv(DATA_DIR / 'csv' / 'labeled_dataset.csv')"
       ]
     },
@@ -822,7 +822,7 @@
       "source": [
         "import shutil\n",
         "\n",
-        "if FIRST_RUN: \n",
+        "if FIRST_RUN:\n",
         "  mri_folders = os.listdir(DATA_DIR/'mri' / 'all')\n",
         "  to_save_t1 = ''\n",
         "  base_t1 = ''\n",
@@ -950,7 +950,7 @@
         "\n",
         "    for i, path in enumerate(mri_paths):\n",
         "        # Need to store both the .nii img and the one with mean,\n",
-        "        # so we can use the .nii for saving later \n",
+        "        # so we can use the .nii for saving later\n",
         "        nii_img = nib.load(path)\n",
         "        img = nii_img.dataobj\n",
         "        transformation_functions = random.choices(['rotate', 'flipv', 'fliph'],\n",
@@ -965,9 +965,9 @@
         "        # Save the new generated image (as: ORIGINALE_modID.4dfp.img)\n",
         "        img_name = path.split('/')[-1].split('.')[0]\n",
         "        nib.save(to_save_img, DATA_DIR / 'mri' / 'modified' / (img_name + f'_mod{i}.4dfp.nii'))\n",
-        "    \n",
+        "\n",
         "    mod_mri_df.to_csv(DATA_DIR/'csv'/'modified-mri.csv', index='False')\n",
-        "    \n",
+        "\n",
         "else:\n",
         "    mod_mri_df = pd.read_csv(DATA_DIR / 'csv' / 'modified-mri.csv')\n"
       ]
@@ -1489,9 +1489,9 @@
         }
       ],
       "source": [
-        "pos = np.array(list(filter(lambda x: x is not None and np.array(x).shape[-1] ==20, p_uimap(process_scan, pos_images + pos_mod_images))))\n",
+        "pos = np.array(list(filter(lambda x: x is not None and np.array(x).shape[-1] ==20, p_uimap(process_scan, pos_mri + mod_mri))))\n",
         "pos_label = np.ones(len(pos)*20, dtype=np.uint8)\n",
-        "neg = np.array(list(filter(lambda x: x is not None and np.array(x).shape[-1] == 20, p_uimap(process_scan, neg_images + neg_mod_images))))\n",
+        "neg = np.array(list(filter(lambda x: x is not None and np.array(x).shape[-1] == 20, p_uimap(process_scan, neg_mri))))\n",
         "neg_label = np.zeros(len(neg)*20, dtype=np.uint8)"
       ]
     },
