--- a/images/3D Brain Plot.ipynb
+++ b/images/3D Brain Plot.ipynb
@@ -378,7 +378,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -392,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
